--- a/blog-detail.html
+++ b/blog-detail.html
@@ -197,7 +197,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="neweve.html">New Eve</a></li>
+				<li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -275,7 +275,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="neweve.html">New Eve</a></li>
+		  <li><a href="e-registration.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
