--- a/donation-page.html
+++ b/donation-page.html
@@ -16,7 +16,7 @@
 
 	<!-- Title -->
 
-	<title>Donation Page</title>
+	<title>Give</title>
 
 
 
@@ -176,6 +176,9 @@
 				  </li> -->
 	  
 				  <li><a href="about-us.html">About</a></li>
+				  <li>
+					<a href="neweve.html">New Eve</a>
+				  </li>
 				  
 				  <li>
 				  <a href="our-ministries.html">Satellite Churchs</a>
@@ -215,7 +218,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="neweve.html">New Eve</a></li>
+				<li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -280,6 +283,9 @@
 			</li> -->
 			<!-- <li><a href="404.html">404 Page</a></li> -->
 			<li><a href="about-us.html">About</a></li>
+			<li>
+				<a href="neweve.html">New Eve</a>
+			  </li>
 			<li><a href="our-ministries.html">Satellite Churchs</a></li>
 			<li><a href="404.html">Generation Next</a></li>
 			<li><a href="donation-page.html">Donate Now</a></li>
@@ -293,7 +299,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="neweve.html">New Eve</a></li>
+		  <li><a href="e-registration.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -366,10 +372,17 @@
 		<div class="myhr2">
 		</div>
 		<div class="account-item">
-			<h3>TITHE & OFFERING</h3>
-			<p>Account name: <strong>Dominion City</strong></p>
+			<h3>TITHE & OFFERING NAIRA TRANSFERS</h3>
+			<p>Account name: <strong>Dominion City Asaba</strong></p>
 			<p>Account number: <strong>002 623 7112</strong></p>
 			<p>Bank: <strong>Access Bank</strong></p>
+		</div>
+		<div class="account-item">
+			<h3>TITHE & OFFERING USD TRANSFERS</h3>
+			<p>Account name: <strong>Dominion City Asaba</strong></p>
+			<p>Account number: <strong>0330017895</strong></p>
+			<p>Bank: <strong>Premium Trust Bank</strong></p>
+			<p>Swift Code: <strong>PTRUNGLA</strong></p>
 		</div>
 		<div class="account-item">
 			<h3>BUILDING OFFERING</h3>
@@ -412,7 +425,7 @@
 			<p>Swift: <strong>ZEIBNGLA</strong></p> -->
 		</div>
 		<div id="account-item" class="account-item">
-			<h3>PROPHET HONOUR</h3>
+			<h3>PASTORS HONOUR</h3>
 			<p>Account name: <strong>ONWUCHEKWA ENYIOMA</strong></p>
 			<p>Account number: <strong>003 939 7219</strong></p>
 			<p>Bank: <strong>Guaranty Trust Bank</strong></p>
@@ -661,7 +674,7 @@
 	
 				<li><a href="events.html">Upcoming Events</a></li>
 				<li><a href="donation-page.html">Give</a></li>
-						  <li><a href="neweve.html">New Eve</a></li>
+						  <li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 	
 				<!-- <li><a href="pastor-detail.html">State Pastor</a></li> -->
