--- a/events.html
+++ b/events.html
@@ -158,6 +158,9 @@
 				  </li> -->
 	  
 				  <li><a href="about-us.html">About</a></li>
+				  <li>
+					<a href="neweve.html">New Eve</a>
+				  </li>
 				  
 				  <li>
 				  <a href="our-ministries.html">Satellite Churchs</a>
@@ -197,7 +200,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="neweve.html">New Eve</a></li>
+				<li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -262,6 +265,9 @@
 			</li> -->
 			<!-- <li><a href="404.html">404 Page</a></li> -->
 			<li><a href="about-us.html">About</a></li>
+			<li>
+				<a href="neweve.html">New Eve</a>
+			  </li>
 			<li><a href="our-ministries.html">Satellite Churchs</a></li>
 			<li><a href="404.html">Generation Next</a></li>
 			<li><a href="donation-page.html">Donate Now</a></li>
@@ -275,7 +281,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="neweve.html">New Eve</a></li>
+		  <li><a href="e-registration.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -899,7 +905,7 @@ Encounter Retreat promises to be a blessed and Life-changing experience. Come wi
 						<li><a href="events.html">Upcoming Events</a></li>
 
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="neweve.html">New Eve</a></li>
+						<li><a href="e-registration.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
