--- a/neweve.html
+++ b/neweve.html
@@ -214,7 +214,7 @@
               <li class=""><a href="schools.html">Dominion City Schools</a></li>
     
               
-              <li><a href="neweve.html">New Eve</a></li>
+              <li><a href="e-registration.html">Register</a></li>
               <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
             </div>
@@ -292,7 +292,7 @@
           <li><a href="product-detail.html">Product Detail</a></li> -->
           </ul>
         </li>
-        <li><a href="neweve.html">New Eve</a></li>
+        <li><a href="e-registration.html">Register</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="donation">
@@ -916,7 +916,7 @@
 						<li><a href="events.html">Upcoming Events</a></li>
 
             <li><a href="donation-page.html">Give</a></li>
-						<li><a href="neweve.html">New Eve</a></li>
+						<li><a href="e-registration.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
