--- a/our-ministries.html
+++ b/our-ministries.html
@@ -169,6 +169,9 @@
 				  </li> -->
 	  
 				  <li><a href="about-us.html">About</a></li>
+				  <li>
+					<a href="neweve.html">New Eve</a>
+				  </li>
 				  
 				  <li>
 				  <a href="our-ministries.html">Satellite Churchs</a>
@@ -208,7 +211,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="neweve.html">New Eve</a></li>
+				<li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -273,6 +276,9 @@
 			</li> -->
 			<!-- <li><a href="404.html">404 Page</a></li> -->
 			<li><a href="about-us.html">About</a></li>
+			<li>
+				<a href="neweve.html">New Eve</a>
+			  </li>
 			<li><a href="our-ministries.html">Satellite Churchs</a></li>
 			<li><a href="404.html">Generation Next</a></li>
 			<li><a href="donation-page.html">Donate Now</a></li>
@@ -286,7 +292,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="neweve.html">New Eve</a></li>
+		  <li><a href="e-registration.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -904,7 +910,7 @@
 
 						<li><a href="events.html">Upcoming Events</a></li>
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="neweve.html">New Eve</a></li>
+						<li><a href="e-registration.html">Register</a></li>
 						<li><a href="contact.html">Contact Us</a></li>
 
 						<!-- <li><a href="pastor-detail.html">State Pastor</a></li> -->
