--- a/schools.html
+++ b/schools.html
@@ -158,6 +158,9 @@
 						  </li> -->
   
 						  <li><a href="about-us.html">About</a></li>
+						  <li>
+							<a href="neweve.html">New Eve</a>
+						  </li>
 						  
 						  <li>
 							<a href="our-ministries.html">Satellite Churchs</a>
@@ -201,7 +204,7 @@
 					  </li>
   
 					  
-					  <li><a href="neweve.html">New Eve</a></li>
+					  <li><a href="e-registration.html">Register</a></li>
 					  <li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				  </div>
@@ -270,6 +273,9 @@
 				</li> -->
 				<!-- <li><a href="404.html">404 Page</a></li> -->
 				<li><a href="about-us.html">About</a></li>
+				<li>
+					<a href="neweve.html">New Eve</a>
+				  </li>
 				<li><a href="our-ministries.html">Satellite Churchs</a></li>
 				<li><a href="genx.html">Generation Next</a></li>
 				<li><a href="donation-page.html">Donate Now</a></li>
@@ -283,7 +289,7 @@
 				<li><a href="product-detail.html">Product Detail</a></li> -->
 			  </ul>
 			</li>
-			<li><a href="neweve.html">New Eve</a></li>
+			<li><a href="e-registration.html">Register</a></li>
 			<li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -960,7 +966,7 @@ Pray | Plan | Publish | Participate
 						<li><a href="events.html">Upcoming Events</a></li>
 
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="neweve.html">New Eve</a></li>
+						<li><a href="e-registration.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
