--- a/sermons.html
+++ b/sermons.html
@@ -154,6 +154,9 @@
 				  </li> -->
 	  
 				  <li><a href="about-us.html">About</a></li>
+				  <li>
+					<a href="neweve.html">New Eve</a>
+				  </li>
 				  
 				  <li>
 				  <a href="our-ministries.html">Satellite Churchs</a>
@@ -193,7 +196,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="neweve.html">New Eve</a></li>
+				<li><a href="e-registration.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -258,6 +261,9 @@
 			</li> -->
 			<!-- <li><a href="404.html">404 Page</a></li> -->
 			<li><a href="about-us.html">About</a></li>
+			<li>
+				<a href="neweve.html">New Eve</a>
+			  </li>
 			<li><a href="our-ministries.html">Satellite Churchs</a></li>
 			<li><a href="404.html">Generation Next</a></li>
 			<li><a href="donation-page.html">Donate Now</a></li>
@@ -271,7 +277,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="neweve.html">New Eve</a></li>
+		  <li><a href="e-registration.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -687,7 +693,7 @@
 
 						<li><a href="events.html">Upcoming Events</a></li>
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="neweve.html">New Eve</a></li>
+						<li><a href="e-registration.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
