Night Of Glory Added

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -188,7 +188,7 @@
 				<a href="JavaScript:void(0)">Events</a>
 	  
 				<ul class="sub-menu">
-				  <li><a href="events.html">Upcoming Events</a></li>
+				  <li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 				  <li><a href="maineventpage.html">Programs</a></li>
 				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 				</ul>
@@ -197,7 +197,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="e-registration.html">Register</a></li>
+				<li><a href="register_nightofglory.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -241,7 +241,7 @@
 			<a href="JavaScript:void(0)">Events</a>
 	  
 			<ul class="sub-menu">
-			<li><a href="events.html">Upcoming Events</a></li>
+			<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 			<li><a href="maineventpage.html">Programs</a></li>
 			<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 			</ul>
@@ -275,7 +275,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="e-registration.html">Register</a></li>
+		  <li><a href="register_nightofglory.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -978,7 +978,7 @@
 
 						<li><a href="our-ministries.html">Our Ministries</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
