--- a/blog.html
+++ b/blog.html
@@ -183,7 +183,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -255,7 +255,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -593,7 +593,7 @@
 
 						<li><a href="our-ministries.html">Our Ministries</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
