--- a/pastor-detail.html
+++ b/pastor-detail.html
@@ -184,7 +184,7 @@
 						  <a href="JavaScript:void(0)">Events</a>
 	
 						  <ul class="sub-menu">
-							<li><a href="events.html">Upcoming Events</a></li>
+							<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 	
 							<li><a href="event-detail.html">Event Details</a></li>
 						  </ul>
@@ -231,7 +231,7 @@
 				<a href="JavaScript:void(0)">Events</a>
 	
 				<ul class="sub-menu">
-				  <li><a href="events.html">Upcoming Events</a></li>
+				  <li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 	
 				  <li><a href="event-detail.html">Event Details</a></li>
 				</ul>
@@ -527,7 +527,7 @@
 
 						<li><a href="our-ministries.html">Our Ministries</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
