--- a/product-detail.html
+++ b/product-detail.html
@@ -198,7 +198,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -270,7 +270,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -872,7 +872,7 @@
 
 						<li><a href="our-ministries.html">Our Ministries</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
