--- a/schools.html
+++ b/schools.html
@@ -191,7 +191,7 @@
 						<a href="JavaScript:void(0)">Events</a>
   
 						<ul class="sub-menu">
-						  <li><a href="events.html">Upcoming Events</a></li>
+						  <li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 						  <li><a href="maineventpage.html">Programs</a></li>
 						  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 						</ul>
@@ -204,7 +204,7 @@
 					  </li>
   
 					  
-					  <li><a href="e-registration.html">Register</a></li>
+					  <li><a href="register_nightofglory.html">Register</a></li>
 					  <li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				  </div>
@@ -248,7 +248,7 @@
 			  <a href="JavaScript:void(0)">Events</a>
   
 			  <ul class="sub-menu">
-				<li><a href="events.html">Upcoming Events</a></li>
+				<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 				<li><a href="maineventpage.html">Programs</a></li>
 				<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 			  </ul>
@@ -289,7 +289,7 @@
 				<li><a href="product-detail.html">Product Detail</a></li> -->
 			  </ul>
 			</li>
-			<li><a href="e-registration.html">Register</a></li>
+			<li><a href="register_nightofglory.html">Register</a></li>
 			<li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -963,10 +963,10 @@ Pray | Plan | Publish | Participate
 
 						<li><a href="our-ministries.html">Satellite Churchs</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="e-registration.html">Register</a></li>
+						<li><a href="register_nightofglory.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
