--- a/sermon-detail-3.html
+++ b/sermon-detail-3.html
@@ -190,7 +190,7 @@
 				<a href="JavaScript:void(0)">Events</a>
 	  
 				<ul class="sub-menu">
-				  <li><a href="events.html">Upcoming Events</a></li>
+				  <li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 				  <li><a href="maineventpage.html">Programs</a></li>
 				  <!-- <li><a href="event-detail.html">Event Details</a></li> -->
 				</ul>
@@ -199,7 +199,7 @@
 				<li class=""><a href="schools.html">Dominion City Schools</a></li>
 	  
 				
-				<li><a href="e-registration.html">Register</a></li>
+				<li><a href="register_nightofglory.html">Register</a></li>
 				<li><a href="contact-us.html">Contact Us</a></li>
 			  </ul>
 			  </div>
@@ -243,7 +243,7 @@
 			<a href="JavaScript:void(0)">Events</a>
 	  
 			<ul class="sub-menu">
-			<li><a href="events.html">Upcoming Events</a></li>
+			<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 			<li><a href="maineventpage.html">Programs</a></li>
 			<!-- <li><a href="event-detail.html">Event Details</a></li> -->
 			</ul>
@@ -278,7 +278,7 @@
 			<li><a href="product-detail.html">Product Detail</a></li> -->
 			</ul>
 		  </li>
-		  <li><a href="e-registration.html">Register</a></li>
+		  <li><a href="register_nightofglory.html">Register</a></li>
 		  <li><a href="contact-us.html">Contact Us</a></li>
 		  </ul>
 		  <div class="donation">
@@ -551,9 +551,9 @@
 
 						<li><a href="our-ministries.html">Satellite Churchs</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 						<li><a href="donation-page.html">Give</a></li>
-						<li><a href="e-registration.html">Register</a></li>
+						<li><a href="register_nightofglory.html">Register</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
