--- a/shop.html
+++ b/shop.html
@@ -193,7 +193,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -265,7 +265,7 @@
 
 										<ul class="sub-menu">
 
-											<li><a href="events.html">Upcoming Events</a></li>
+											<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 											<li><a href="event-detail.html">Event Details</a></li>
 
@@ -650,7 +650,7 @@
 
 						<li><a href="our-ministries.html">Our Ministries</a></li>
 
-						<li><a href="events.html">Upcoming Events</a></li>
+						<li><a href="nightofglory.html">Night Of Glory 2024</a></li>
 
 						<li><a href="contact.html">Contact Us</a></li>
 
