--- a/nightofglory.html
+++ b/nightofglory.html
@@ -451,7 +451,7 @@
 
 							<div class="col-lg-5 col-md-12 col-sm-12">
 
-								<img class="img-fluid w-100" src="assets/images/event-img-112.webp" alt="event-img-112">
+								<img class="img-fluid w-100" src="assets/images/event-img-112.webp" alt="">
 
 							</div>
 
@@ -489,7 +489,7 @@ Pray | Plan | Publish | Participate
 
 					</div>
 
-					<div class="event-video position-relative">
+					<!-- <div class="event-video position-relative">
 
 						<img class="img-fluid w-100" src="assets/images/event-video.webp" alt="event-video">
 
@@ -499,7 +499,7 @@ Pray | Plan | Publish | Participate
 
 						</a>
 
-					</div>
+					</div> -->
 
 					<p>
 						
