MONGO DB HARDDDD

--- a/register_nightofglory.html
+++ b/register_nightofglory.html
@@ -11,7 +11,11 @@
 
     <!-- Title Page-->
     <title>Register</title>
-
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="assets/images/pastor-icon.webp"
+  />
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
     <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
